# Bottomless

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
client/: CMakeLists.txt  main.cpp
client/include/: client_header.hpp
client/include/net/: configuration.hpp
client/src/net/: configuration.cpp
client/src/network/: configuration.cpp
client/tests/: build_info.cpp  opengl.cpp
common/: CMakeLists.txt
common/include/: aggregates_to_tuples.hpp  assert.hpp  build_info.hpp  compiler_hints.hpp  terminal.hpp  traits.hpp  utility.hpp  visitors.hpp
common/include/network/: common.hpp
common/include/serial/: aggregate_traits.hpp  all.hpp  base_traits.hpp  decorators.hpp  io_base.hpp  operations.hpp  serializers.hpp
common/src/: assert.cpp
common/tests/: build_info.cpp  environment.cpp  serialization.cpp  traits.cpp  visitors.cpp
server/: CMakeLists.txt  main.cpp
server/tests/: build_info.cpp
tests/: CMakeLists.txt  build_info.cpp
